2004/04/11 22:57 (-0400) muppetman

	* Glib.pm, README, NEWS: stable release 1.042

2004/04/11 22:40 (-0400) muppetman

	* GenPod.pm: document the __hide__, __gerror__, and __function__
	modifiers for the apidoc directive.  Add $MAIN_MOD to the head of the
	see alsos list if it's set, so that the generated pages link to the
	correct extension.  Clean up the semantics of the copyright
	generation stuff, and make the docs a little clearer.

	* MakeHelper.pm: set $Glib::GenPod::MAIN_MOD with the module name in
	Glib::MakeHelper::postamble_docs_full, either from the depends object
	or the NAME key.

2004/04/12 01:25 (+0200) kaffeetisch

	* GenPod.pm
	* Glib.pm
	* MakeHelper.pm
	* ParseXSDoc.pm: Fix a spelling error here, adjust some grammar there.

2004/04/11 19:16 (-0400) muppetman

	* GClosure.xs: don't clobber $_ when warning of unhandled exceptions.
	apparently the SAVE_DEFSV trick from a while back doesn't work.

	* Subclass.pm: beef up the docs.

2004/04/08 23:22 (-0400) muppetman

	* Glib.pm, README, NEWS: stable release 1.041

2004/04/08 23:13 (-0400) muppetman

	merge of bugfixes on HEAD:

	* Glib.xs: gperl_sv_from_filename didn't check the return status
	of g_filename_to_utf8 properly, causing segfaults on invalid
	filenames. (actually pcg's fix.)

2004/04/04 12:56 (-0500) rwmcfa1

	* GErrox.xs: unused var warnings fixed.

	* Glib.xs: quite some warnings in the runtime version checking.

2004/04/04 00:52 (-0500) muppetman

	* Glib.xs: actually do work in filename_from_unicode().  thanks to
	Jan Hudec for noticing this was broken.

2004/03/23 20:20 (-0500) muppetman

	* Glib.pm, README, NEWS: stable release 1.040

2004/03/22 11:02 (-0500) muppetman

	* typemap, GBoxed.xs: use INT2PTR to hush warnings about improper
	casting on cygwin.

2004/03/19 03:35 (-0500) muppetman

	* Glib.pm, NEWS, README: 1.040 release candidate 1  (1.0391)

2004/03/17 17:09 (+0100) kaffeetisch

	* gperl.h (SvGObject_ornull): Use SvOK instead of SvTRUE.

	* gperl.h